--- a/chainlink-example/Dockerfile
+++ b/chainlink-example/Dockerfile
@@ -2,4 +2,5 @@ FROM python:3.9-slim
 VOLUME /golem/in /golem/out
 COPY chainlink_request.py /golem/run/chainlink_request.py
 RUN chmod +x /golem/run/*
+RUN pip install web3
 ENTRYPOINT ["sh"]
