Transfering script (instead of embedding it into Docker image)

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ dmypy.json
 /.vscode
 docker-chainlink-request-example-latest-*.gvmi
 manifest.json.base64.sign.sha256
+docker-python-web3-latest-*.gvmi
